<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eyecall Volunteer</string>
    <string name="action_settings">Settings</string>
    <string name="locations_button_add">Add location</string>
    <string name="locations_button_refresh">Refresh</string>
    <string name="row_header_location">Location:</string>
    <string name="row_header_preferred">Type:</string>
    <string name="row_text_preferred">Preferred/Known</string>
    <string name="row_text_not_preferred">Not preferred/Unknown</string>
    <string name="location_button_save">Save</string>
    <string name="location_button_cancel">Cancel</string>
    <string name="location_header_preferred">Type:</string>
    <string name="location_radio_preferred">Preferred</string>
    <string name="location_radio_not_preferred">Not preferred</string>
    
    <string name="title_video">Video</string>
    <string name="title_map">Map</string>
    
    <string name="ok">OK</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="help">Help</string>
    
    <string name="loading_locations">Loading locations</string>
    <string name="loading_locations_timeout">Failed!</string>
    <string name="remove_location_confirm_title">Remove Location</string>
    <string name="remove_location_confirm">Are you sure you want to delete this location?</string>
    <string name="request_denied_title">Request canceled</string>
    <string name="request_denied">You were too slow or somebody accepted before you!</string>
    <string name="registering">Registering</string>
    <string name="wait">Please wait</string>
    <string name="location_removed">Location removed</string>
    <string name="location_refresh_first">Refresh your locations first</string>
    <string name="no_internet">No internet connection!</string>
    <string name="request_incoming">Incoming request</string>
    
    
    <string name="error_register_unable">Unable to register. Please try again later.</string>
    
    
    <string name="location_header_radius">Radius:</string>

</resources>
